--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
-  background-color: lightgreen;
+  background-color: lightgrey;
 }
 
 footer{
-  position:fixed;
   bottom:0;
   width: 100%;
+  margin-top: 5vh;
 }
 
 .greenText {
