--- a/css/style.css
+++ b/css/style.css
@@ -34,3 +34,18 @@ input[type=text] {
 .commentBtn {
   margin-top: 20px;
 }
+
+nav .input-field {
+  margin: 1em 0 0 0;
+  display: inline;
+}
+
+
+input[type=search]:focus {
+  background-color: rgba(255, 255, 255, 0.75);
+  border: 0;
+  box-shadow: none;
+  color: rgba(0, 0, 0, 0.5);
+  padding-left: 0 10px;
+  border-radius: 5px;
+}
