--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@ body {
 }
 
 footer{
+  position:fixed;
   bottom:0;
   width: 100%;
   margin-top: 5vh;
@@ -57,9 +58,18 @@ input[type=search]:focus {
 .card-image {
   height: 100%;
   width:100%;
-  margin-top: 10%;
+  margin: 5% 0;
 }
 
 .card {
   padding: 10px;
+  margin-bottom: 2vh;
+}
+
+.row {
+  margin-bottom: 0;
+}
+
+fieldset{
+  margin: 0;
 }
